--- a/index.css
+++ b/index.css
@@ -335,4 +335,84 @@ li>a{
 }
 
 /* Last main sectin  */
+.lastmainsection{
+    display: flex;
+    gap: 24px;
+    margin-top: 100px;
+    justify-content: center;
 
+}
+
+.lastmainsection1{
+    width: 474px;
+    height: 422px;
+    flex-shrink: 0;
+    border-radius: 16px;
+    border: 1px solid #FF5400;
+    background: #FFF;
+
+}
+#hr{
+    width: 393px;
+    height: 1px;
+    background: rgba(19, 19, 24, 0.10);
+}
+
+.lmsbutton{
+    width: 393px;
+    height: 52px;
+    flex-shrink: 0;
+    border-radius: 8px;
+    background: #FF5400;
+    color: #FFF;
+    text-align: center;
+    font-family: Mulish;    
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 800;
+    line-height: normal;
+}
+.lastmainsection2{
+    width: 672px;
+    height: 422px;
+    flex-shrink: 0;
+    border-radius: 16px;
+    background: url('Rectangle 8 (1).png'), lightgray 50% / cover no-repeat;
+
+
+
+}
+
+.box{
+    width: 330px;
+    height: 120px;
+    transform: rotate(-19.628deg);
+    flex-shrink: 0;
+    border-radius: 16px;
+    background: #FF5400;
+    position: relative;
+    top: 230px;
+    left: 335px;
+}
+
+#boxs{
+    transform: rotate(10px);
+    color: #FFF;
+    text-align: center; 
+    font-family: Mulish;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    padding-top:  20px;
+
+}
+#boxh3{
+    color: #FFF;
+    font-family: Mulish;
+    font-size: 32px;
+    font-style: normal;
+    font-weight: 800;
+    line-height: normal;
+
+}
