--- a/index.css
+++ b/index.css
@@ -106,6 +106,8 @@ li>a{
     flex-shrink: 0;
     border-radius: 8px;
     background: #FFF;
+    border: 0px;
+
 }
 #select2{
     width: 174px;
@@ -113,6 +115,8 @@ li>a{
     flex-shrink: 0;
     border-radius: 8px;
     background: #FFF;
+    border: 0px;
+
 
 }
 #wherego{
@@ -121,7 +125,9 @@ li>a{
     flex-shrink: 0;
     border-radius: 8px;
     background: #FFF;
+    border: 0px;
 }
+
 .btn{
     color: #FFF;
     width: 174px;
@@ -131,7 +137,20 @@ li>a{
     background: #FF5400;
     border: 0px;
     font-weight: 700px;
+    display: flex;
+    align-items: center;
+ 
 }
+
+#btnimg{
+    padding-top: 14px;
+    padding-left: 35px ;
+    padding-bottom: 14px;
+    margin-right: 10px;
+        
+}
+
+
 .bh3{
     text-align: center;
     color: #FFF;
@@ -162,6 +181,7 @@ li>a{
     padding-right: 75px;
     gap: 20px;
 }
+
 .m1s1{
     width: 1440px;
     height: 6940px;
@@ -214,6 +234,7 @@ li>a{
     font-style: normal;
     font-weight: 400;
     line-height: 26px;
+    padding-left: 35px;
 
 }
 
@@ -305,6 +326,99 @@ li>a{
     gap: 24px;
     margin-top: 48px;
     justify-content: center;
+}
+
+#hotel1{
+    width: 64px;
+    height: 64px;
+    flex-shrink: 0;
+    padding-top: 32px;
+    padding-left: 32px;
+}
+
+#m3h3{
+    color: #131318;
+    font-family: Mulish;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 800;
+    line-height: normal;
+    margin-top: 32px;
+    padding-left: 32px;
+}
+
+#m3p2{
+    width: 486px;
+    color: #5A5A5D;
+    font-family: Mulish;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 26px;
+    margin-top: 5px;
+    padding-left: 32px;
+}
+
+#map1{
+    width: 64px;
+    height: 64px;
+    flex-shrink: 0;
+    padding-top: 32px;
+    padding-left: 32px;
+}
+
+#m3s2h3{
+    color: #131318;
+    font-family: Mulish;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 800;
+    line-height: normal;
+    margin-top: 32px;
+    padding-left: 32px;
+}
+
+#m3s2p2{
+    width: 486px;
+    color: #5A5A5D;
+    font-family: Mulish;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 26px;
+    margin-top: 5px;
+    padding-left: 32px;
+}
+
+#price{
+    width: 64px;
+    height: 64px;
+    flex-shrink: 0;
+    padding-top: 32px;
+    padding-left: 32px;
+}
+
+#m3d3h3{
+    color: #131318;
+    font-family: Mulish;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 800;
+    line-height: normal;
+    margin-top: 32px;
+    padding-left: 32px;
+}
+
+#m3p3{
+    width: 486px;
+    color: #5A5A5D;
+    font-family: Mulish;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 26px;
+    margin-top: 5px;
+    padding-left: 32px;
 }
 
 .m3s1{
